# SwarmZ

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/scripts/: release-preflight.mjs  release-preflight.test.mjs
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
docs/codex-protocol/: README.md  codex_app_server_protocol.v2.schemas.json  inventory.md
docs/plans/: gpt-realtime-2-orchestration-layer.html  rebuild-codex-only-v1.md  swarmz-comprehensive-audit-2026-07-14.html  t3code-takeaways.md
docs/release-notes/: _install_footer.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.3.0.md  v0.3.1.md  v0.3.10.md  v0.3.11.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md
scripts/: fix-pty-perms.mjs  update-claude.zsh
server/: index.mjs  usage.mjs
src/: App.tsx  store-policy.test.ts  store.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make_icon.py
src-tauri/src/: codex_usage.rs  explore.rs  fsx.rs  git.rs  github.rs  integration_native.rs  lib.rs  limits.rs  localstt.rs  main.rs  mission_evidence.rs  openrouter.rs  plans.rs  project.rs  projects.rs  pty.rs  runtime_native.rs  storefile.rs  transcript.rs  usage.rs  worktree.rs
src-tauri/src/agents/: builder.rs  context.rs  memory.rs  mod.rs
src-tauri/src/codex/: approval.rs  host.rs  mod.rs  protocol.rs  sessions.rs
src-tauri/src/codex/host/: tests.rs
src-tauri/src/codex/sessions/: tests.rs
src-tauri/src/github/: process.rs  reads.rs  tests.rs  watcher.rs  writes.rs
src-tauri/src/orchestrator/: adapter.rs  appserver.rs  bus.rs  instructions.rs  memory.rs  mod.rs  openrouter.rs  persona.rs  protocol.rs  registry.rs
src-tauri/src/orchestrator/appserver/: tests.rs
src-tauri/src/runtime_native/: process.rs  tests.rs
src-tauri/src/worktree/: tests.rs
src/components/: AgentPane.tsx  CloseAgentDialog.tsx  CloseBusyDialog.tsx  CloseWorkspaceDialog.tsx  CloseWorktreeDialog.tsx  CommandPalette.tsx  Deck.tsx  Dictation.tsx  FileDropOverlay.tsx  FloatingTerminals.tsx  GitHubPanel.tsx  InsertCommandPalette.tsx  LoadPresetDialog.tsx  NewAgentDialog.tsx  OrchestratorMarkdown.test.tsx  OrchestratorMarkdown.tsx  OrchestratorPanel.tsx  PersistenceHealthBanner.tsx  PresetThumbnail.tsx  ProfilesDialog.tsx  QuickNotesPanel.tsx  QuitConfirmDialog.tsx  RuntimeEnvironmentsPanel.tsx  SavePresetDialog.tsx  SettingsDialog.tsx  Terminal.tsx  TilingGrid.tsx  TitleBar.tsx  Toasts.tsx  UsageDashboard.tsx  WebDirectoryPicker.tsx  WorkspaceLayer.tsx  WorktreePanel.tsx
src/components/agents/: AgentEditor.tsx  AgentIdentity.tsx  AgentLibrary.tsx  AgentPicker.tsx  BuilderModal.tsx  NewAgentBuilderDialog.tsx
src/components/missions/: AttentionInbox.tsx  CandidateAttemptsPanel.tsx  GitHubIssueImportPanel.tsx  MissionBoard.tsx  MissionCreateDialog.tsx  MissionGraph.tsx  MissionHeaderActions.tsx  MissionInsightsPanel.test.ts  MissionInsightsPanel.tsx  MissionIntegrationView.tsx  MissionRecoveryPanel.tsx  MissionTaskInspector.tsx  MissionTimeline.tsx  MissionWorkspace.tsx
src/components/orchestrator/: ChatView.tsx  ModelEffortPicker.tsx
src/components/settings/: AboutSettingsSections.tsx  AppearanceSettingsSection.tsx  ApprovalSettingsSection.tsx  ConductorSettingsSection.tsx  GithubSettingsSection.tsx  MemoryPathsSettingsSections.tsx  SettingsPrimitives.tsx
src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  misc.tsx  (+5 more)
src/lib/: approval-rules.test.ts  approval-rules.ts  backend-tauri.ts  backend-types.ts  backend-web.ts  command-vars.ts  compact.test.ts  compact.ts  dictation.ts  dirpicker.ts  dnd.ts  events.ts  git.ts  inflight.test.ts  inflight.ts  insert-command.ts  layout.test.ts  layout.ts  limits.ts  local-stt.ts  openrouter.ts  paths.test.ts  paths.ts  presets.ts  quit-core.test.ts  quit-core.ts  quit.ts  schema-version.test.ts  schema-version.ts  term-host.ts  term-registry.ts  transport.ts  triage.ts  updates.ts  utils.ts  worktree.ts
(+222 files in other folders)
