[package]
name = "swarmz"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "swarmz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
parking_lot = "0.12"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
# "sync" for the orchestrator bus's oneshot pending map (orchestrator/bus.rs);
# "process"/"io-util"/"rt" for the long-lived `codex app-server` children and
# their stdio pump tasks (codex/host.rs)
tokio = { version = "1", features = ["time", "sync", "process", "io-util", "rt"] }
# O_NOFOLLOW opens for the plan documents (plans.rs no-follow confinement)
libc = "0.2"
# read-only parse of the user's ~/.codex/config.toml to enumerate their MCP
# servers — SwarmZ disables them per spawned app-server (codex/host.rs;
# already in the tree via tauri)
toml = "0.9"

[dev-dependencies]
# async unit tests for the orchestrator bus (#[tokio::test])
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }
# mock AppHandle for registry-level live spikes (phase8_session_compact_spike
# drives the REAL session_start/compact/send commands without a window)
tauri = { version = "2", features = ["test"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
